# tgbot-compose

./: .gitignore  CMakeLists.txt  setup.py
.github/workflows/: python-wheels.yml
src/: __init__.pyi  api_types.pyi  meta.py  meta.pyi
src/api_types/: CMakeLists.txt  User.c  User.cpp  User.txt  __init__.c  __init__.h  bases.c  bases.h  dict.cpp  dict.hpp  generator.cpp  generator.h  macro.h  macro.hpp  property.c  property.h  serialization.h
src/backend/: __init__.py  __init__.pyi
src/meta/: CMakeLists.txt  __init__.c  __init__.h  decorators.c  decorators.h  hsa;s.py  unit.c  unit.h
